--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 
 
     <div class="RIGHT_LINK">
-        <img src="image/LINE.png" alt="" /><span>Line</span>
-        <img src="image/facebook.png" alt="" /><span>Facebook</span>
-        <img src="image/instagram.png" alt="" /><span>Instagram</span>
+
+
+        <a href=""><img src="image/LINE.png" alt="" /></a>
+        <a href=""><img src="image/facebook.png" alt="" /></a>
+        <a href=""><img src="image/instagram.png" alt="" /></a>
         <a href="#" class="TOTOP"><img src="image/top.png" alt="" /></a>
     </div>
 
     <header class="w1200">
         <a id="LOGO" href="#"><img src="image/BIG_LOGO_6_8.png" alt="LOGO" /></a>
+
+
+
         <nav>
             <ul>
 
